<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudyToDo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Priorities -->
    <string name="priority_high">High</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_low">Low</string>

    <!-- Action Bar -->
    <string name="action_new">New</string>
    <string name="action_save">Save</string>
    <string name="action_sort">Sort</string>

    <!-- Action Bar Sort By Options -->
	<string name="sort_by_date_asc">Sort by ascending date</string>
	<string name="sort_by_date_desc">Sort by descending date</string>
	<string name="sort_by_priority_asc">Sort by ascending priority</string>
	<string name="sort_by_priority_desc">Sort by descending priority</string>
	
    <!-- Subject View Pager Titles -->
    <string name="subject_tab_to_do">TO DO</string>
    <string name="subject_tab_done">DONE</string>
    <string name="subject_tab_teachers">TEACHERS</string>
    <string name="subject_tab_classes">Classes</string>

    <!-- Navigation Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- Navigation Drawer Items -->
    <string name="today">Today</string>
    <string name="tasks">Tasks</string>
    <string name="courses">Courses</string>
    <string name="timetable">Timetable</string>

    <!-- Fragment Titles -->
    <string name="subjects">Subjects</string>

    <!-- Today Fragment Titles -->
    <string name="today_classes_title">CLASSES</string>
    <string name="today_tasks_title">TASKS</string>

    <!-- Create Task -->
    <string name="new_task">New Task</string>
    <string name="create_task_title">Title:</string>
    <string name="create_task_description">Description:</string>
    <string name="create_task_date">Date:</string>
    <string name="create_task_priority">Priority:</string>
    <string name="create_task_percentage">Percentage:</string>
    <string name="create_task_percentage_mark">%</string>
    <string name="create_task_subject">Subject:</string>
    <string name="create_task_place">Place:</string>
    <string name="create_task_is_evaluable">Evaluable:</string>

    <!-- Create Course -->
    <string name="new_course">New Course</string>
    <string name="name">Name:</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>

    <!-- Create Subject -->
    <string name="new_subject">New Subject</string>
    <string name="select_color">Select a color:</string>

    <!-- Create Professor -->
    <string name="new_teacher">New Teacher</string>
    <string name="email">Email:</string>
    <string name="office">Office:</string>
    <string name="phone">Phone:</string>

    <!-- Create Class -->
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="day">Day: </string>
    <string name="new_class">New Class</string>
    <string name="classtype">Class Type: </string>
    <string name="theory">Theory </string>
    <string name="laboratory">Laboratory </string>
    <string name="practice">Practice </string>
    <string name="problems">Problems </string>

    <!-- Color Picker -->
    <string name="pick_color_button">Pick color</string>

    <!-- Timetable -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- Task -->
    <string name="priority">Priority:</string>
    <string name="completed">Completed</string>
    <string name="completed_dots">Completed:</string>
    <string name="completed_icon_yes">{fa-check}</string>
    <string name="completed_icon_no">{fa-times}</string>
    <string name="percent_mark"> %</string>
    <string name="enter_grade">Enter your grade:</string>
	<string name="no_task_description">This task has no description</string>
    
</resources>
