<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:studytodo="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_sort_by"
        android:title="@string/action_sort"
        studytodo:showAsAction="always">
        <menu>
            <item
	            android:id="@+id/action_sort_by_date_asc"
	            android:title="@string/sort_by_date_asc"/>
	        <item
	            android:id="@+id/action_sort_by_date_desc"
	            android:title="@string/sort_by_date_desc"/>
	        <item
	            android:id="@+id/action_sort_by_priority_asc"
	            android:title="@string/sort_by_priority_asc"/>
	        <item
	            android:id="@+id/action_sort_by_priority_desc"
	            android:title="@string/sort_by_priority_desc"/>
        </menu>
    </item>
    <item android:id="@+id/action_new"
          android:title="@string/action_new"
          studytodo:showAsAction="always"/>
</menu>