<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dp"
	    android:orientation="vertical" >

        <LinearLayout
            style="@style/FormRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView02"
                style="@style/FormLabel.TextRight"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/create_task_subject" />

            <Spinner
                android:id="@+id/Spinner01"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="4" />
        </LinearLayout>

        <LinearLayout
            style="@style/FormRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/subject_textView"
                style="@style/FormLabel.TextRight"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/day" />

            <Spinner
                android:id="@+id/subject_spinner"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="4" />
        </LinearLayout>

        <LinearLayout
            style="@style/FormRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView01"
                style="@style/FormLabel.TextRight"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/from" />

            <EditText
                android:id="@+id/EditText01"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:ems="10"
                android:inputType="datetime" >

                <requestFocus />
            </EditText>
        </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        style="@style/FormRow">
	        <TextView
		        android:id="@+id/date_textView"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        style="@style/FormLabel.TextRight"
		        android:text="@string/to" />
		    <EditText
		        android:id="@+id/date_editText"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_weight="4"
		        android:ems="10"
		        android:inputType="datetime" />
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        style="@style/FormRow">
	        <TextView 
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/create_task_place"
	            style="@style/FormLabel.TextRight"/>
	        <EditText 
	            android:id="@+id/place_editText"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="4"
	            android:ems="10"
	            android:inputType="text"/>
	    </LinearLayout>
	
	</LinearLayout>

</ScrollView>
